--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
                 <div class="filter filters__officer"></div>
             </div>
         </header>
-        <article class=""></article>
-        <article class="criminalsContainer">
-            
-        </article>
+        <article class="convictionsContainer"></article>
+        <article class="criminalsContainer"></article>
         <article class="officersContainer"></article>
     </main>
 
