finished some css and have show notes displaying

--- a/index.html
+++ b/index.html
@@ -17,10 +17,18 @@
                 <div class="filter filters__officer"></div>
             </div>
         </header>
-        <article class="noteFormContainer"></article>
-        <article class="convictionsContainer"></article>
+        <section class="bodySection">                    
         <article class="criminalsContainer"></article>
+            <aside class="aside">
+            <article class="noteFormContainer"></article>
+            <div class="noteListContainer"></div>
+            <!-- <div class="noteListButton"> -->
+            <article class="noteList"></article>
+            </aside>
+        
+        <article class="convictionsContainer"></article>        
         <article class="officersContainer"></article>
+        </section>
     </main>
 
     <script type="module" src="./scripts/main.js"></script>    
