Implemented new Associates button

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
                 <div class="filter filters__officer"></div>
             </div>
         </header>
-        <section class="bodySection">                    
+        <section class="bodySection"> 
+                          
         <article class="criminalsContainer"></article>
             <aside class="aside">
+            <section class="associatesContainer"></section> 
             <article class="noteFormContainer"></article>
             <div class="noteListContainer"></div>
             <!-- <div class="noteListButton"> -->
