--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
         <header>
             <div class="filters">
                 <div class="filter filters__crime"></div>
-                <div class="filter filters__incarceration"></div>
                 <div class="filter filters__officer"></div>
+                <div class="filter filters__witnesses"></div>
+                <div class="facility__button"></div>
             </div>
         </header>
         <section class="bodySection"> 
-                          
+        <article class="facilityContainer"></article>
         <article class="criminalsContainer"></article>
             <aside class="aside">
             <section class="associatesContainer"></section> 
