--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 
 <body>
+    <!-- <img class="bodyImg" src="images/victor-rodriguez-UrfpprfDB0k-unsplash.jpg" alt="red and blue"> -->
 
     <main class="container">
         <header>
-            <h1>Glassdale PD</h1>
+            <img class="headerImg" src="images/victor-rodriguez-UrfpprfDB0k-unsplash.jpg" alt="red and blue">
+            <h1 class="title">Glassdale PD</h1>
             <div class="filters">
                 <div class="filter filters__crime"></div>
                 <div class="filter filters__officer"></div>
